@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2015 "Neo Technology,"
+ * Copyright (c) 2002-2016 "Neo Technology,"
  * Network Engine for Objects in Lund AB [http://neotechnology.com]
  *
  * This file is part of Neo4j.
@@ -19,10 +19,10 @@
  */
 package org.neo4j.kernel.impl.security;
 
-import org.apache.commons.lang3.SystemUtils;
-import org.junit.Test;
-
+import java.io.File;
 import java.net.URL;
+
+import org.junit.Test;
 
 import org.neo4j.graphdb.DependencyResolver;
 import org.neo4j.graphdb.factory.GraphDatabaseSettings;
@@ -33,6 +33,7 @@ import org.neo4j.kernel.security.URLAccessValidationError;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
 import static org.mockito.Matchers.eq;
 import static org.mockito.Mockito.mock;
@@ -90,11 +91,30 @@ public class FileURLAccessRuleTest
     }
 
     @Test
+    public void shouldThrowWhenRelativePathIsOutsideImportDirectory() throws Exception
+    {
+        File importDir = new File( "/tmp/neo4jtest" ).getAbsoluteFile();
+        final Config config = new Config(
+                MapUtil.stringMap( GraphDatabaseSettings.load_csv_file_url_root.name(), importDir.toString() ) );
+        final GraphDatabaseAPI gdb = mock( GraphDatabaseAPI.class );
+        final DependencyResolver mockResolver = mock( DependencyResolver.class );
+        when( gdb.getDependencyResolver() ).thenReturn( mockResolver );
+        when( mockResolver.resolveDependency( eq( Config.class ) ) ).thenReturn( config );
+        try
+        {
+            URLAccessRules.fileAccess().validate( gdb, new URL( "file:///../baz.csv" ) );
+            fail( "expected exception not thrown " );
+        }
+        catch ( URLAccessValidationError error )
+        {
+            assertThat( error.getMessage(), equalTo( "file URL points outside configured import directory" ) );
+        }
+    }
+
+    @Test
     public void shouldAdjustURLToWithinImportDirectory() throws Exception
     {
-        final URL url = SystemUtils.IS_OS_WINDOWS
-                        ? new URL( "file:///C:/bar/baz.csv" )
-                        : new URL( "file:///bar/baz.csv" );
+        final URL url = new File( "/bar/baz.csv" ).toURI().toURL();
         final GraphDatabaseAPI gdb = mock( GraphDatabaseAPI.class );
         final DependencyResolver mockResolver = mock( DependencyResolver.class );
         when( gdb.getDependencyResolver() ).thenReturn( mockResolver );
@@ -102,9 +122,7 @@ public class FileURLAccessRuleTest
         when( mockResolver.resolveDependency( eq( Config.class ) ) ).thenReturn( config );
 
         URL accessURL = URLAccessRules.fileAccess().validate( gdb, url );
-        URL expected = SystemUtils.IS_OS_WINDOWS
-                       ? new URL( "file:///C:/var/lib/neo4j/import/bar/baz.csv" )
-                       : new URL( "file:///var/lib/neo4j/import/bar/baz.csv" );
-        assertThat( accessURL, equalTo( expected ) );
+        URL expected = new File( "/var/lib/neo4j/import/bar/baz.csv" ).toURI().toURL();
+        assertEquals( expected, accessURL );
     }
 }
